UserLimits: simple api error + limits screen with navigation to it

--- a/PrivateMail/en.lproj/Localizable.strings
+++ b/PrivateMail/en.lproj/Localizable.strings
@@ -9,3 +9,7 @@
 "starred" = "Starred";
 "noMessages" = "No messages";
 "showMoreMessages" = "Show more messages";
+
+"userLimitsDescription" = "Mobile apps are not allowed in your billing plan.\nPlease upgrade plan.";
+"upgradeNow" = "UPGRADE NOW";
+"backToLogin" = "BACK TO LOGIN";
