Login: fixed placeholder text.

--- a/PrivateMail/en.lproj/Localizable.strings
+++ b/PrivateMail/en.lproj/Localizable.strings
@@ -9,7 +9,7 @@
 "email" = "Email";
 "password" = "Password";
 "host" = "Host";
-"login" = "LOGIN";
+"login" = "Login";
 "pleaseEnterPassword" = "Please enter password";
 "pleaseEnterEmail" = "Please enter email";
 "pleaseEnterHost" = "Please enter host";
